# matrix

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: main.yml
examples/: matrix_op_example.cpp
include/: matrix.hpp  matrix_op.hpp
include/matrix_op/: elementwise_operations.hpp  matrix_operations.hpp  row_operations.hpp  types.hpp  vector_operations.hpp
test/: elementwise_op-test.cpp  matrix_op-test.cpp  matrix_operations.cpp  row_op-test.cpp  test-elementwise_operations.cpp  test-matrix_operations.cpp  test-row_operations.cpp  test-vector_operations.cpp  vector_operations.cpp
test/matlab/: run_all_tests.m
